--- a/YevhenUshakov.TestProject.Model/YevhenUshakov.TestProject.Model.csproj
+++ b/YevhenUshakov.TestProject.Model/YevhenUshakov.TestProject.Model.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.1.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
   <ItemGroup>
