Added work with the database, new methods in repositories and services, and swagger.

--- a/YevhenUshakov.TestProject.Web.Api/appsettings.json
+++ b/YevhenUshakov.TestProject.Web.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DataContext": "Server=(LocalDb)\\MSSQLLocalDb;Initial Catalog=YevhenUshakov.TestProject;Integrated Security=SSPI;"
+    },
     "JwtSettings": {
         "Key": "H@McQfTjWnZr4u7x!z%C*F-JaNdRgUkX",
         "Issuer": "yevhenushakov.com",
@@ -20,7 +23,7 @@
             {
                 "Name": "RollingFile",
                 "Args": {
-                    "pathFormat": "C:\\inetpub\\logs\\yevhenushakov.com\\log-{Date}.txt",
+                    "pathFormat": "C:\\inetpub\\logs\\yevhenushakov\\log-{Date}.txt",
                     "retainedFileCountLimit": 7
                 }
             }
